// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User withStyles should render User component with Props 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(User)
      labels={Object {}}
      userData={
        Object {
          "name": "UserName",
          "role": "UserRole",
        }
      }
    />
  </HvProvider>
</JssProvider>
`;

exports[`User withStyles should render correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(User) />
  </HvProvider>
</JssProvider>
`;
